--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
         <p class="partners__info">Based in Chicago. I love playing tennis and loud music.</p>
       </div>
       <div class="partners__item">
-        <img src="./assets/img/user2.png" alt="" class="partners__photo">
+        <img src="./assets/img/user1.png" alt="" class="partners__photo">
         <h3 class="partners__name">Lucas Marsha</h3>
         <p class="partners__info">Based in Chicago. I love playing tennis and loud music.</p>
       </div>
       <div class="partners__item">
-        <img src="./assets/img/user3.png" alt="" class="partners__photo">
+        <img src="./assets/img/user1.png" alt="" class="partners__photo">
         <h3 class="partners__name">Heather Walker</h3>
         <p class="partners__info">I'm a happy person that loves cats and climbing on mountains.</p>
       </div>
       <div class="partners__item">
-        <img src="./assets/img/user4.png" alt="" class="partners__photo">
+        <img src="./assets/img/user1.png" alt="" class="partners__photo">
         <h3 class="partners__name">Bradley Hunter</h3>
         <p class="partners__info">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
       </div>
@@ -102,29 +102,7 @@
       <div class="discover__item"><h2>Travelling</h2></div>
     </div>
   </section>
-  <section class="search">
-    <h2 class="search__header">Find your partner!</h2>
-    <p class="search__paragraph">Hi! What are your holiday interests?</p>
-    <form action="#" method="get">
-      <input class="search__text" type="text" name="interests" value="Enter your interests">
-      <input class="search__btn btn" type="submit" value="Search partners">
-    </form>
-  </section>
-  <footer class="page-footer">
-    <div class="container-fluid">
-      <h2 class="page-footer__brand">Dreamshare</h2>
-      <div class="page-footer__items">
-        <h3 class="page-footer__items-header">Company</h3>
-        <a href="#" class="page-footer__item">About</a>
-        <a href="#" class="page-footer__item">Contacts</a>
-        <a href="#" class="page-footer__item">Press</a>
-        <a href="#" class="page-footer__item">Blog</a>
-      </div>
-      <div class="page-footer__items">
-        <h3 class="page-footer__items-header">Partners</h3>
-      </div>
-      <h3 class="page-footer__me">Egor Ryabysh<br>MADE IT</h3>
-    </div>
-  </footer>
+  <section class="search"></section>
+  <footer class="page-footer"></footer>
 </body>
 </html>
